--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   lottie: ^3.2.0
+  sidebarx: ^0.17.1
+  hawk_fab_menu: ^1.2.0
 
 dev_dependencies:
   flutter_test:
